# wupi

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
cards/: Operator.xml  Wupi.sim
cards/game_cards/: cyberpunk_neon2271.sim  dungeon_tavern.sim
cards/wupi_knowledge/: sim-card-format.md
codex/: os-directives-vs-persona.md  user-profile-format.md
docs/: UPDATER_SETUP.md  critical-wall.md  games-app-design.md
scripts/: build-signed.cjs  clear-webview2-cache.cjs  release.cjs
src/: index.html  main.ts  script.js  style.css  styles.css  terminal.css  terminal.html  terminal.js  wupi.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent.rs  api.rs  bracket_parser.rs  chat_format.rs  codex.rs  consequence.rs  engine.rs  game_command.rs  game_engine.rs  kv_buffer.rs  lib.rs  llm.rs  main.rs  memory.rs  memory_embedder.rs  memory_embedder_llama.rs  memory_rrf.rs  model_downloader.rs  narrator_prompt.rs  npc_runtime.rs  prompts.rs  schema.rs  schema_engine.rs  schema_validator.rs  session.rs  sim_card.rs  stream_filter.rs  system_menu.rs  terminal.rs  theme.rs  tools.rs  updater.rs  user_profile.rs
src-tauri/src/hardware/: audio.rs  bluetooth.rs  mod.rs  wifi.rs
updater/: latest.json
