[package]
name = "wupi"
version = "0.3.7"
edition = "2021"

[lib]
name = "wupi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
# NOTE: tauri-plugin-updater + tauri-plugin-process were removed when WUPI
# switched to portable distribution. Tauri's updater is installer-only and
# can't update a portable exe; a custom file-level updater (src/updater.rs)
# replaces it. Relaunch-on-update uses Tauri's built-in `app.restart()`
# (core API, no plugin needed).
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Async runtime for the agent loop + streaming.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
# Typed errors without boilerplate.
anyhow = "1"
# HTTP client for the API chat backend (OpenAI-compatible SSE streaming).
# rustls-tls avoids any system OpenSSL dependency on Windows; the `stream`
# feature is required to read the Server-Sent Events response incrementally
# (token-by-token, same streaming UX as the local model).
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
# futures-util for StreamExt — needed to iterate the reqwest SSE byte stream.
futures-util = "0.3"
# Regex for the StreamFilter's combined marker-stripping pattern.
regex = "1"
# Logging — written to a file in app data; visible only in Debug mode.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
# CUDA is a hard dependency of the architecture (local GPU inference for the
# 12B chat model). The `cuda` feature gates llama.cpp's CUDA backend; do NOT
# remove it — CPU-only inference collapses ~32-42 tok/s to single digits.
# See AGENTS.md §0 (stack), §2 (deps), §2B (build rules).
llama-cpp-2 = { version = "0.1.151", features = ["sampler", "cuda"] }
encoding_rs = "0.8"
# Memory engine (Phase 2). `bundled` compiles SQLite from the amalgamation →
# FTS5 is guaranteed available on Windows without a system SQLite install.
# No `load_extension` feature — sqlite-vec is registered via the
# `sqlite3_auto_extension` FFI at startup (see memory.rs::ensure_vec_loaded).
rusqlite = { version = "0.31", features = ["bundled"] }
# sqlite-vec virtual table for dense vector (cosine) search. v0.1.9 is the
# latest 0.1.x (2025-07). Embeds the C source, compiled via the `cc` crate.
sqlite-vec = "0.1.9"
# Simulation Card (.sim) loader — small structured persona files. roxmltree is
# a tiny DOM parser that auto-merges CDATA into text nodes, so the emoticons
# and quotes in card prose parse with zero special handling. Purpose-built for
# read-once-at-startup config files; no streaming overhead.
roxmltree = "0.10"
# Randomized startup introduction selection (one pick per boot from the active
# card's <introductions> list). The canonical RNG; not otherwise in the tree.
rand = "0.9"
# Zip extraction for the portable self-updater. Pure-Rust, no system deps.
# The updater downloads a portable.zip from the GitHub release and extracts it
# in place, skipping the `data/` dir (user state). See src/updater.rs.
zip = "2"
# Pseudo-terminal (ConPTY on Windows) for the in-app Terminal drawer
# (src/terminal.rs). xterm.js in the webview is the visible surface; the real
# cmd.exe runs headless in a ConPTY this crate provides. The cross-platform
# API means the same module compiles for non-Windows test builds too.
portable-pty = "0.8"
# Windows API bindings — official Microsoft crate (Win32 + WinRT). Used for
# the hardware integrations: Core Audio (volume + output switching), WLAN
# (Wi-Fi scan/connect), and Bluetooth (radio + device enumeration). Feature
# gates are additive per phase so unused API surface isn't compiled in.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_StationsAndDesktops",
    "Win32_System_Threading",
    "Win32_NetworkManagement_WiFi",
    "Win32_NetworkManagement_Ndis",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_System_Variant",
    "Devices_Bluetooth",
    "Devices_Enumeration",
    "Devices_Radios",
    "Foundation_Collections",
] }
# Direct dep so the windows::core::interface macro can resolve windows_core
# (the macro expands to paths through the windows_core crate root).
windows-core = "0.58"
